# DATN-TTS

./: README.md
DATN/: CMakeLists.txt
DATN/btree/: tree.c  tree.h  tree_xsampa_tone_at_final_tricky  tree_xsampa_tone_in_side_new  tree_xsampa_tone_in_side_tricky  tricky_phone_tone_in_side  xsampa_tone_at_final_tricky
DATN/btree/bt-5.0.0/: .dep  bigt  bigtdel  bt  btr  kcp
DATN/btree/bt-5.0.0/test/: bttest.c~  file1.txt  file2.txt  file3.txt  file4.txt  mytree1  test  test.c  test.c~  yak
DATN/include/: File.h  nlp.h  phoneme.h  sentence.h  split.h  syllable.h  word.h
DATN/src/: File.c  VTEDlite+hts_engine.c  nlp.c  phoneme.c  sentence.c  split.c  syllable.c  word.c
